@@ -18,7 +18,6 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -100,32 +99,19 @@
             </Button>
 
             <!--Data Export button-->
-            <Button Grid.Row="2" Grid.Column="1" Command="{Binding DataExportCommand}" Margin="10" Width="300" Height="150" BorderBrush="Transparent" Background="Transparent">
-
-                <!--StackPanel>
-				    <TextBlock Text="Data" HorizontalAlignment="Center" FontSize="24" Foreground="#FFFBC865">
-					    <TextBlock.Effect>
-						    <DropShadowEffect ShadowDepth="4" BlurRadius="0.5" Opacity="0.8" Color="#FF8A5909" />
-					    </TextBlock.Effect>
-				    </TextBlock>
-				    <TextBlock Text="Export" HorizontalAlignment="Center" FontSize="24" Foreground="#FFFBC865">
-					    <TextBlock.Effect>
-						    <DropShadowEffect ShadowDepth="4" BlurRadius="0.5" Opacity="0.8" Color="#FF8A5909" />
-					    </TextBlock.Effect>
-				    </TextBlock>
-			    </StackPanel-->
+            <!--Button Grid.Row="2" Grid.Column="1" Command="{Binding DataExportCommand}" Margin="10" Width="300" Height="150" BorderBrush="Transparent" Background="Transparent">
                 <Image Source="../Images/data_export.png" />
-            </Button>
+            </-->
 
-            <Button Grid.Row="3" Grid.Column="0" Command="{Binding DvlSetupCommand}" Margin="10" Width="300" Height="150" BorderBrush="Transparent" Background="Transparent" >
+            <Button Grid.Row="2" Grid.Column="1" Command="{Binding DvlSetupCommand}" Margin="10" Width="300" Height="150" BorderBrush="Transparent" Background="Transparent" >
                 <Image Source="../Images/dvl_setup.png" />
             </Button>
 
-            <Button Grid.Row="3" Grid.Column="1" Command="{Binding PredictionModelCommand}" Margin="10" Width="300" Height="150" BorderBrush="Transparent" Background="Transparent">
+            <!--Button Grid.Row="3" Grid.Column="1" Command="{Binding PredictionModelCommand}" Margin="10" Width="300" Height="150" BorderBrush="Transparent" Background="Transparent">
                 <Image Source="../Images/PredictionModel.png" />
-            </Button>
+            </-->
 
-            <Grid Grid.Column="2" Grid.Row="3">
+            <Grid Grid.Column="2" Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
